# consilium

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  consilium.yaml.example  pyproject.toml
.github/workflows/: ci.yml  consilium.yml
consilium/: __init__.py  cli.py  credit.py  github.py  handler.py  ledger.py  rebuild.py
docs/: _config.yml  agent-setup.md  demo.md  index.md  maintainers.md  policy.md  protocol-core.md  protocol-extensions.md  protocol.md
ledger/: index.json
ledger/entries/: 0001.json  0002.json  0003.json  0004.json
tests/: test_credit.py  test_github.py  test_handler.py  test_ledger.py  test_rebuild.py
